--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-app.svg
-                " alt="design icon" width="40">
+                " alt="iOS development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -253,7 +253,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-design.svg" alt="Android development icon" width="40">
               </div>
 
               <div class="service-content-box">
