--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Arsalan Shah" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Syed Arsalan Shah" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Arsalan Shah">Arsalan Shah</h1>
+          <h1 class="name" title="Syed Arsalan Shah">Syed Arsalan Shah</h1>
 
           <p class="title">App Developer</p>
         </div>
@@ -819,7 +819,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="desktop-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Experience</h3>
