chor: content updated

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <div class="hero-stats">
         <div class="stat-item">
-          <span class="stat-number" data-target="8">0</span>
+          <span class="stat-number" data-target="10">0</span>
           <span class="stat-suffix">+</span>
           <span class="stat-label">Years Experience</span>
         </div>
@@ -168,7 +168,7 @@
 
         <div class="about-text">
           <p class="about-intro">
-            I'm a <strong>Mobile Application Developer</strong> based in Karachi, Pakistan with over 8 years of
+            I'm a <strong>Mobile Application Developer</strong> based in Karachi, Pakistan with over 10 years of
             experience
             turning complex problems into simple, beautiful, and intuitive apps.
           </p>
@@ -359,12 +359,28 @@
             <div class="timeline-item">
               <div class="timeline-marker"></div>
               <div class="timeline-content">
-                <span class="timeline-date">2019 — Present</span>
-                <h4 class="timeline-role">Mobile Application Developer</h4>
-                <p class="timeline-company">KSK Logistics LLC</p>
+                <span class="timeline-date">2025 (May) — Present</span>
+                <h4 class="timeline-role">Mobile Solutions Architect</h4>
+                <p class="timeline-company">UHF Solutions</p>
                 <p class="timeline-description">
-                  Leading mobile development initiatives,
-                  planning, managing and implementing product development for iOS & Android platforms.
+                  Architecting scalable mobile ecosystems and driving technical strategy for enterprise solutions.
+                  Leading cross-functional teams in designing robust iOS & Android architectures, ensuring performance
+                  optimization, and delivering high-impact digital products.
+                </p>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-marker"></div>
+              <div class="timeline-content">
+                <span class="timeline-date">2019 — 2025 (March)</span>
+                <h4 class="timeline-role">Sr. Mobile Engineer</h4>
+                <p class="timeline-company">Agility</p>
+                <p class="timeline-description">
+                  Spearheaded the end-to-end development lifecycle for flagship mobile products, directing planning,
+                  architecture, and execution.
+                  Championed engineering best practices and managed cross-platform delivery to ensure seamless user
+                  experiences on iOS and Android.
                 </p>
               </div>
             </div>
@@ -376,8 +392,9 @@
                 <h4 class="timeline-role">Senior Software Engineer</h4>
                 <p class="timeline-company">Axact</p>
                 <p class="timeline-description">
-                  Developed and maintained iOS and Android applications,
-                  providing code maintenance and system upgrades.
+                  Engineered high-performance iOS and Android applications, delivering critical system upgrades and
+                  ensuring long-term code maintainability.
+                  Optimized application architecture to enhance stability and user experience.
                 </p>
               </div>
             </div>
@@ -389,8 +406,9 @@
                 <h4 class="timeline-role">Android Developer</h4>
                 <p class="timeline-company">Hyenoon Technologies</p>
                 <p class="timeline-description">
-                  Built Android applications using Java,
-                  designing and developing apps based on company requirements.
+                  Developed robust Android applications using Java, translating business requirements into functional,
+                  user-centric mobile solutions.
+                  Collaborated with design and backed teams to ensure seamless application performance and delivery.
                 </p>
               </div>
             </div>
