feat: Add dynamic project modal with detailed information and image gallery.

--- a/index.html
+++ b/index.html
@@ -470,17 +470,17 @@
       </div>
 
       <div class="portfolio-grid">
-        <div class="project-card" data-category="ios">
+        <div class="project-card" data-category="ios" data-project="ui-story">
           <div class="project-image">
             <img src="./assets/images/ui_story.png" alt="UI Story" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -489,17 +489,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="ios">
+        <div class="project-card" data-category="ios" data-project="boxit4me">
           <div class="project-image">
             <img src="./assets/images/boxit4me_ios.png" alt="Boxit4me" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -508,17 +508,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="ios">
+        <div class="project-card" data-category="ios" data-project="meezan360">
           <div class="project-image">
             <img src="./assets/images/meezan360.png" alt="Meezan360" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -527,17 +527,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="android">
+        <div class="project-card" data-category="android" data-project="tmbooking">
           <div class="project-image">
             <img src="./assets/images/tmbooking.jpg" alt="TMBooking" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -546,17 +546,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="ios">
+        <div class="project-card" data-category="ios" data-project="fursah">
           <div class="project-image">
             <img src="./assets/images/fursah1.webp" alt="Fursah App" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -565,17 +565,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="ios">
+        <div class="project-card" data-category="ios" data-project="fm91">
           <div class="project-image">
             <img src="./assets/images/fm1.jpeg" alt="FM91" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -584,17 +584,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="android">
+        <div class="project-card" data-category="android" data-project="catchmapp">
           <div class="project-image">
             <img src="./assets/images/cm1.webp" alt="Catchmapp" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -603,17 +603,17 @@
           </div>
         </div>
 
-        <div class="project-card" data-category="android">
+        <div class="project-card" data-category="android" data-project="dining">
           <div class="project-image">
             <img src="./assets/images/dining1.webp" alt="Dining & Nightlife" loading="lazy">
             <div class="project-overlay">
-              <a href="#" class="project-link" aria-label="View Project">
+              <button class="project-link" aria-label="View Project Details">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
                   <polyline points="15 3 21 3 21 9" />
                   <line x1="10" y1="14" x2="21" y2="3" />
                 </svg>
-              </a>
+              </button>
             </div>
           </div>
           <div class="project-info">
@@ -697,6 +697,68 @@
       </div>
     </div>
   </section>
+
+  <!-- Project Detail Modal -->
+  <div class="project-modal" id="project-modal">
+    <div class="modal-backdrop"></div>
+    <div class="modal-container">
+      <button class="modal-close" id="modal-close" aria-label="Close modal">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <line x1="18" y1="6" x2="6" y2="18" />
+          <line x1="6" y1="6" x2="18" y2="18" />
+        </svg>
+      </button>
+
+      <div class="modal-content">
+        <div class="modal-gallery">
+          <div class="gallery-main">
+            <img id="gallery-main-image" src="" alt="Project Screenshot" loading="lazy">
+            <button class="gallery-nav gallery-prev" id="gallery-prev">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="15 18 9 12 15 6" />
+              </svg>
+            </button>
+            <button class="gallery-nav gallery-next" id="gallery-next">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="9 18 15 12 9 6" />
+              </svg>
+            </button>
+          </div>
+          <div class="gallery-thumbnails" id="gallery-thumbnails"></div>
+        </div>
+
+        <div class="modal-info">
+          <div class="modal-header">
+            <span class="modal-category" id="modal-category"></span>
+            <h2 class="modal-title" id="modal-title"></h2>
+          </div>
+
+          <p class="modal-description" id="modal-description"></p>
+
+          <div class="modal-tech">
+            <h4>Technologies Used</h4>
+            <div class="tech-tags" id="modal-tech-tags"></div>
+          </div>
+
+          <div class="modal-features">
+            <h4>Key Features</h4>
+            <ul class="features-list" id="modal-features-list"></ul>
+          </div>
+
+          <div class="modal-actions">
+            <a href="#" class="btn btn-primary modal-app-link" id="modal-app-link" target="_blank" rel="noopener">
+              <span>View on App Store</span>
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
+                <polyline points="15 3 21 3 21 9" />
+                <line x1="10" y1="14" x2="21" y2="3" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="footer">
